--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Julia West's Git Achievements <img src='http://www.gravatar.com/avatar/9dd5f2bc9a1a32a86db6e68f1f1907d4'/></h2>
-Unlocked        4/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 37 points<br>
+Unlocked        4/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 42 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -23,14 +23,15 @@ Unlocked        4/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  59 status
-  27 diff
+  60 status
+  28 diff
+  16 commit
   16 add
-  15 commit
   12 push
    3 rm
    3 reset
