New achievement Apprentice Blacksmith (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Julia West's Git Achievements <img src='http://www.gravatar.com/avatar/9dd5f2bc9a1a32a86db6e68f1f1907d4'/></h2>
-Unlocked       10/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 128 points<br>
+Unlocked       10/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 131 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -18,6 +18,7 @@ Unlocked       10/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 3)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -52,8 +53,8 @@ Git commands sorted by usage:
  150 diff
  133 add
  104 commit
-  77 push
-  60 checkout
+  79 push
+  64 checkout
   14 stash
   10 pull
    7 rm
